# RustRAG

./: .gitignore  CHANGELOG.md  CHANGELOG_ZH.md  Cargo.toml  FIXES_PLAN.md  FIXES_SUMMARY.md  LICENSE-APACHE  LICENSE-MIT  README.md  README_CN.md  README_EN.md  README_ZH.md  SONARQUBE_FIXES.md  SONARQUBE_FIXES_FINAL.md  edit_tools.py  fix_tests.py  refactor_db.py  refactor_locks.py  test_config.json
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml  release.yml.bak  upstream-watch.yml
docs/: devrag_rust_analysis.md
docs/plans/: 2026-02-27-rustrag-design.md  2026-02-27-rustrag-implementation.md
src/: config.rs  frontmatter.rs  lib.rs  main.rs  test_cfg.rs  test_ort.rs  updater.rs  watcher.rs
src/db/: documents.rs  mod.rs  models.rs  relations.rs  search.rs
src/embedder/: api.rs  download.rs  mock.rs  mod.rs  onnx.rs  tokenizer.rs
src/indexer/: code_parser.rs  core.rs  dictionary.rs  languages.rs  markdown.rs  mod.rs  relations.rs  text_parser.rs
src/mcp/: server.rs  tools.rs
tests/: integration_test.rs
