[package]
name = "rustrag"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "本地 RAG MCP Server - DevRag 的 Rust 实现"

[dependencies]
# MCP 协议
rmcp = { version = "0.16", features = ["server", "macros", "transport-io"] }
tokio = { version = "1", features = ["full"] }

# ONNX 推理
ort = { version = "=2.0.0-rc.11", features = ["download-binaries"] }
ndarray = "0.16"

# SQLite + 向量搜索
rusqlite = { version = "0.32", features = ["bundled"] }
sqlite-vec = "0.1.7-alpha.10"

# Tokenizer
tokenizers = "0.22"

# AST 解析
tree-sitter = "0.26"
tree-sitter-go = "0.25"
tree-sitter-python = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.25"

# Markdown
pulldown-cmark = "0.13"

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# HTTP
reqwest = { version = "0.12", features = ["blocking", "stream"] }
indicatif = "0.17"

# CLI
clap = { version = "4", features = ["derive"] }

# 工具
bytemuck = { version = "1", features = ["derive"] }
glob = "0.3"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
schemars = "1"

[profile.release]
lto = true
strip = true
opt-level = "z"
